/*
** Copyright 2022 Centreon
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
**
** For more information : contact@centreon.com
*/

syntax = "proto3";

import "proto_header.proto";

package com.centreon.broker;



message CustomVariable {
    enum VarType {
        HOST = 0;
        SERVICE = 1;
    }

    BBDOHeader header = 1;
    uint64 host_id = 2;
    uint64 service_id = 3;
    bool modified = 4;
    string name = 5;
    uint64 update_time = 6;
    string value = 7;

    string default_value = 8;
    bool enabled = 9;
    bool password = 10;
    VarType var_type = 11;
}